# backend/source/media_api/users/endpoints.py
@@ -44,16 +44,3 @@ def logout_user():
     session_id = request.headers['session'].split()
     end_session(session_id)
     return {}, HTTPStatus.NO_CONTENT
-
-
-@validate_session
-def rename_user():
-    user_name = request.json['user_name']
-    try:
-        request.session_user.update_user_name(user_name)
-        response = {'user_name': user_name}
-        code = HTTPStatus.OK
-    except ValueError as e:
-        response = {'message': f'Invalid user name: {str(e)}'}
-        code = HTTPStatus.BAD_REQUEST
-    return jsonify(response), code
